# praxis-subnet

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/red-team/: README.md  RT-001-determinism.md  RT-002-reward-bounds.md  RT-003-reset-correctness.md  RT-004-solver-baseline.md  RT-005-cross-cutting.md
scripts/: build_gridworld_manifest.py
tests/: test_smoke.py
tests/bonding/: test_adapter_basic.py  test_adapter_determinism.py  test_in_memory_basic.py  test_in_memory_errors.py  test_in_memory_properties.py
tests/checks/: _adversarial_envs.py  _isolation_target.py  test_determinism_action_policy.py  test_determinism_basic.py  test_determinism_hash_infos.py  test_determinism_loader.py  test_determinism_rollout.py  test_determinism_self_consistency.py  test_reset_correctness_basic.py  test_reset_correctness_config.py  test_reset_correctness_seed_isolation.py  test_reset_correctness_violations.py  test_reward_bounds_basic.py  test_reward_bounds_config.py  test_reward_bounds_derived_seeds.py  test_reward_bounds_truncation.py  test_rollout_isolation.py  test_rollout_primitive.py  test_seeds.py  test_solver_baseline_basic.py  test_solver_baseline_config.py  test_solver_baseline_f023.py  test_solver_baseline_seeds.py  test_solver_baseline_violations.py
tests/envs/: test_gridworld_basic.py  test_gridworld_determinism.py  test_gridworld_registration.py
tests/orchestrator/: test_report_serialisation.py  test_runner_aggregation.py  test_runner_determinism.py  test_runner_errored.py  test_runner_failing.py  test_runner_passing.py
(+31 files in other folders)
