[project]
name = "praxis"
version = "0.1.0"
description = "Phase 1 prototype: validator checks for an RL Environment Generator mechanism."
readme = "README.md"
authors = [
    { name = '"1vaNtastiq"', email = '"vantastiq@pm.me"' }
]
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.3.0",
    "numpy>=2.4.4",
    "packaging>=24.0",
    "pydantic>=2.9",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.152.4",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "gymnasium.*"
ignore_missing_imports = true
